# cbf

./: .gitignore  CBF.cpp  CBF.h  CMakeLists.txt  GridWorld.cpp  GridWorld.h  README.md  Robot.cpp  Robot.h  Swarm.cpp  Swarm.h  Target.cpp  Target.h  World.cpp  World.h  cbf_main.cpp  draw.py  get_time_spacial_data.py  requirements.txt  run.sh  utils.h
cmake/: FindGUROBI.cmake
computing_geometry/: Polygon.cpp  Polygon.h
config/: config.json
include/: CBF.hpp  GridWorld.hpp  MultiCBF.hpp  Robot.hpp  State.hpp  Swarm.hpp  Target.hpp  World.hpp  cbf-core.h  utils.h
include/ComputingGeometry/: CVT.hpp  Line.hpp  Point.hpp  Polygon.hpp  Utils.h
include/cbf/: CBF.hpp  MultiCBF.hpp  cbf
include/communicators/: CommunicatorBase.hpp  CommunicatorCentral.hpp  communicators
include/computing_geometry/: CVT.hpp  ComputingGeometry  Line.hpp  Point.hpp  Polygon.hpp  Utils.h
include/models/: BaseModel.hpp  CentralizedModel.hpp  DoubleIntegrate2D.hpp  SingleIntegrate2D.hpp  models
include/optimisers/: Gurobi.hpp  HiGHS.hpp  OptimiserBase.hpp  optimiser  optimisers
include/world/: GridWorld.hpp  Target.hpp  World.hpp  world
launch/: IndoorSearch.json  cbf_main.json  main.json
scripts/: draw.py  drawEnergyCBF.py  get_time_spacial_data.py  run.sh  visualize_searching_areas.py
scripts/analysis/: analyze_data.py
scripts/draw/: loader.py  main.py  utils.py
scripts/draw/components/: base.py  cbc.py  cbf_derivative.py  cbf_values.py  centralized_cbf_value.py  commcbf_uncertainty.py  components.py  control_input.py  cvt_center_density.py  energy.py  fixed_comm_range.py  h_derivative.py  heatmap.py  lines.py  map_animation.py  optimisation.py  optimisation_contour.py  optimisation_vector.py  optimization_failure.py  search_heatmap.py  search_percentage.py
scripts/draw/drawers/: animation.py  base.py  drawers.py  static_global.py  static_group.py  static_separate.py
scripts/draw/layout/: grid_layout.py
scripts/draw_cbf/: drawEnergyCBF.py
scripts/visualize_plot/: compare_cone_methods.py  visualize_searching_areas.py
src/: Swarm.cpp  cbf_main.cpp  main.cpp  testHiGHS.cpp  testOptimisers.cpp
tests/: testOptimisers.cpp  testPolygon.cpp
